Commit for DAOstake.
